dropshot/tests/fail/bad_server_only11.stderr
error: server `MyServer` must not have a where clause
  --> tests/fail/bad_server_only11.rs:9:1
   |
9  | / where
10 | |     usize: std::fmt::Debug,
   | |___________________________^

error[E0425]: cannot find function `api_description` in module `my_server`
  --> tests/fail/bad_server_only11.rs:26:16
   |
26 |     my_server::api_description::<MyImpl>();
   |                ^^^^^^^^^^^^^^^ not found in `my_server`

error[E0425]: cannot find function `stub_api_description` in module `my_server`
  --> tests/fail/bad_server_only11.rs:27:16
   |
27 |     my_server::stub_api_description();
   |                ^^^^^^^^^^^^^^^^^^^^ not found in `my_server`
